crates/benday-core/tests/snapshots/corpus__case__bar_color_by_x.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 75,
    "rows": 15
  },
  "plot": {
    "x": 3,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      10.0
    ],
    "step": 5.0,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0",
        "row": 12
      },
      {
        "value": 5.0,
        "frac": 0.5,
        "label": "5",
        "row": 6
      },
      {
        "value": 10.0,
        "frac": 1.0,
        "label": "10",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "a",
      "b",
      "c"
    ],
    "domain": null,
    "tick_cols": [],
    "labels": [
      {
        "text": "a",
        "col": 15,
        "row": 14
      },
      {
        "text": "b",
        "col": 39,
        "row": 14
      },
      {
        "text": "c",
        "col": 63,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.05555555555555555,
            "w": 0.2222222222222222,
            "h": 0.4,
            "color": "#55c4fe"
          },
          {
            "x0": 0.3888888888888889,
            "w": 0.2222222222222222,
            "h": 0.9,
            "color": "#6cd092"
          },
          {
            "x0": 0.7222222222222222,
            "w": 0.2222222222222222,
            "h": 0.6,
            "color": "#eca851"
          }
        ]
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "m",
    "y_field": "v",
    "aggregate": "sum",
    "series_points": [
      1,
      1,
      1
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
