crates/benday-core/tests/snapshots/corpus__case__bar_count.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 64,
    "rows": 12
  },
  "plot": {
    "x": 4,
    "y": 0,
    "w": 60,
    "h": 10
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      3.0
    ],
    "step": 0.5,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0.0",
        "row": 9
      },
      {
        "value": 0.5,
        "frac": 0.16666666666666666,
        "label": "0.5",
        "row": 8
      },
      {
        "value": 1.0,
        "frac": 0.3333333333333333,
        "label": "1.0",
        "row": 6
      },
      {
        "value": 1.5,
        "frac": 0.5,
        "label": "1.5",
        "row": 5
      },
      {
        "value": 2.0,
        "frac": 0.6666666666666666,
        "label": "2.0",
        "row": 3
      },
      {
        "value": 2.5,
        "frac": 0.8333333333333334,
        "label": "2.5",
        "row": 1
      },
      {
        "value": 3.0,
        "frac": 1.0,
        "label": "3.0",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "a",
      "b",
      "c"
    ],
    "domain": null,
    "tick_cols": [],
    "labels": [
      {
        "text": "a",
        "col": 14,
        "row": 11
      },
      {
        "text": "b",
        "col": 34,
        "row": 11
      },
      {
        "text": "c",
        "col": 54,
        "row": 11
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.05,
            "w": 0.23333333333333334,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.38333333333333336,
            "w": 0.23333333333333334,
            "h": 0.3333333333333333,
            "color": "#21c9b5"
          },
          {
            "x0": 0.7166666666666667,
            "w": 0.23333333333333334,
            "h": 0.3333333333333333,
            "color": "#21c9b5"
          }
        ]
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "k",
    "y_field": "k",
    "aggregate": "count",
    "series_points": [
      3,
      1,
      1
    ]
  }
}
