crates/benday-core/tests/snapshots/corpus__case__bar_numeric_strings.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 75,
    "rows": 15
  },
  "plot": {
    "x": 3,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      12.0
    ],
    "step": 2.0,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0",
        "row": 12
      },
      {
        "value": 2.0,
        "frac": 0.16666666666666666,
        "label": "2",
        "row": 10
      },
      {
        "value": 4.0,
        "frac": 0.3333333333333333,
        "label": "4",
        "row": 8
      },
      {
        "value": 6.0,
        "frac": 0.5,
        "label": "6",
        "row": 6
      },
      {
        "value": 8.0,
        "frac": 0.6666666666666666,
        "label": "8",
        "row": 4
      },
      {
        "value": 10.0,
        "frac": 0.8333333333333334,
        "label": "10",
        "row": 2
      },
      {
        "value": 12.0,
        "frac": 1.0,
        "label": "12",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "a",
      "b"
    ],
    "domain": null,
    "tick_cols": [],
    "labels": [
      {
        "text": "a",
        "col": 21,
        "row": 14
      },
      {
        "text": "b",
        "col": 57,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.08333333333333333,
            "w": 0.3472222222222222,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.5833333333333334,
            "w": 0.3472222222222222,
            "h": 0.625,
            "color": "#96d274"
          }
        ]
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "m",
    "y_field": "v",
    "aggregate": "sum",
    "series_points": [
      1,
      1
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
