crates/benday-core/tests/snapshots/corpus__case__bar_promoted_string_nominal.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 74,
    "rows": 15
  },
  "plot": {
    "x": 2,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      6.0
    ],
    "step": 2.0,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0",
        "row": 12
      },
      {
        "value": 2.0,
        "frac": 0.3333333333333333,
        "label": "2",
        "row": 8
      },
      {
        "value": 4.0,
        "frac": 0.6666666666666666,
        "label": "4",
        "row": 4
      },
      {
        "value": 6.0,
        "frac": 1.0,
        "label": "6",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "2026-06-14T09:05:00",
      "2026-06-14T11:20:00",
      "2026-06-14T10:00:00"
    ],
    "domain": null,
    "tick_cols": [],
    "labels": [
      {
        "text": "2026-06-14T09:05:00",
        "col": 5,
        "row": 14
      },
      {
        "text": "2026-06-14T11:20:00",
        "col": 29,
        "row": 14
      },
      {
        "text": "2026-06-14T10:00:00",
        "col": 53,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.05555555555555555,
            "y0": 0.5,
            "w": 0.2222222222222222,
            "h": 0.5,
            "color": "#67d191"
          },
          {
            "x0": 0.3888888888888889,
            "y0": 0.16666666666666663,
            "w": 0.2222222222222222,
            "h": 0.8333333333333334,
            "color": "#dccb4d"
          },
          {
            "x0": 0.7222222222222222,
            "y0": 0.6666666666666667,
            "w": 0.2222222222222222,
            "h": 0.3333333333333333,
            "color": "#21c9b5"
          }
        ],
        "direction": "vertical"
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "ts",
    "y_field": "v",
    "aggregate": "sum",
    "series_points": [
      1,
      1,
      1
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
