crates/benday-core/tests/snapshots/corpus__case__bar_simple.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 62,
    "rows": 12
  },
  "plot": {
    "x": 2,
    "y": 0,
    "w": 60,
    "h": 10
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      7.0
    ],
    "step": 7.0,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0",
        "row": 9
      },
      {
        "value": 7.0,
        "frac": 1.0,
        "label": "7",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "jan",
      "feb",
      "mar"
    ],
    "domain": null,
    "tick_cols": [],
    "labels": [
      {
        "text": "jan",
        "col": 11,
        "row": 11
      },
      {
        "text": "feb",
        "col": 31,
        "row": 11
      },
      {
        "text": "mar",
        "col": 51,
        "row": 11
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.05,
            "w": 0.23333333333333334,
            "h": 0.42857142857142855,
            "color": "#4bcea1"
          },
          {
            "x0": 0.38333333333333336,
            "w": 0.23333333333333334,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.7166666666666667,
            "w": 0.23333333333333334,
            "h": 0.7142857142857143,
            "color": "#b5d060"
          }
        ]
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "m",
    "y_field": "v",
    "aggregate": "sum",
    "series_points": [
      1,
      1,
      1
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
