crates/benday-core/tests/snapshots/corpus__case__bin_not_yet_routed.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
ERROR (spec): bar needs one categorical and one quantitative channel; both x ("size_bytes") and y ("latency_ms") resolved quantitative; put categories on one axis or set an explicit "type"
