crates/benday-core/tests/snapshots/corpus__case__columnar_inline.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 75,
    "rows": 15
  },
  "plot": {
    "x": 3,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      80.0
    ],
    "step": 20.0,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0",
        "row": 12
      },
      {
        "value": 20.0,
        "frac": 0.25,
        "label": "20",
        "row": 9
      },
      {
        "value": 40.0,
        "frac": 0.5,
        "label": "40",
        "row": 6
      },
      {
        "value": 60.0,
        "frac": 0.75,
        "label": "60",
        "row": 3
      },
      {
        "value": 80.0,
        "frac": 1.0,
        "label": "80",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "mon",
      "tue",
      "wed"
    ],
    "domain": null,
    "tick_cols": [],
    "labels": [
      {
        "text": "mon",
        "col": 14,
        "row": 14
      },
      {
        "text": "tue",
        "col": 38,
        "row": 14
      },
      {
        "text": "wed",
        "col": 62,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.05555555555555555,
            "y0": 0.6,
            "w": 0.2222222222222222,
            "h": 0.4,
            "color": "#3fcda7"
          },
          {
            "x0": 0.3888888888888889,
            "y0": 0.025000000000000022,
            "w": 0.2222222222222222,
            "h": 0.975,
            "color": "#ffc34d"
          },
          {
            "x0": 0.7222222222222222,
            "y0": 0.36250000000000004,
            "w": 0.2222222222222222,
            "h": 0.6375,
            "color": "#9bd171"
          }
        ],
        "direction": "vertical"
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "day",
    "y_field": "n",
    "aggregate": "sum",
    "series_points": [
      1,
      1,
      1
    ],
    "data_source": "inline_columns",
    "truncated": null,
    "total_rows": null
  }
}
